<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/emblem_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/champions" />

    <TextView
        android:id="@+id/nameOfCompetition_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/emblem_iv"
        app:layout_constraintTop_toTopOf="@id/emblem_iv"
        app:layout_constraintBottom_toTopOf="@+id/startDate_tv"
        android:layout_marginStart="16dp"
        android:text="@string/africa_cup" />


    <TextView
        android:id="@+id/area_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/area"
        app:layout_constraintStart_toStartOf="@id/startDate_tv"
        app:layout_constraintTop_toBottomOf="@id/emblem_iv" />

    <TextView
        android:id="@+id/startDate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/area_tv"
        app:layout_constraintTop_toBottomOf="@id/area_tv"
        android:layout_marginTop="8dp"
        android:text="@string/_2024_01_13" />

    <TextView
        android:id="@+id/endDate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/emblem_iv"
        app:layout_constraintTop_toBottomOf="@id/startDate_tv"
        android:layout_marginTop="8dp"
        android:text="@string/end_date_2024_01_24" />

    <TextView
        android:id="@+id/matchday_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/emblem_iv"
        app:layout_constraintTop_toBottomOf="@id/endDate_tv"
        android:layout_marginTop="8dp"
        android:text="@string/current_matchday_3" />
    <TextView
        android:id="@+id/numberOfAvailableSeason_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/matchday_tv"
        app:layout_constraintTop_toBottomOf="@id/matchday_tv"
        android:layout_marginTop="8dp"
        android:text="@string/number_of_available_season_3" />
    <TextView
        android:id="@+id/lastUpdate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/matchday_tv"
        app:layout_constraintTop_toBottomOf="@id/numberOfAvailableSeason_tv"
        android:layout_marginTop="8dp"
        android:text="@string/last_updated" />

</androidx.constraintlayout.widget.ConstraintLayout>
